kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-proxy
  labels:
    app: ws-proxy
spec:
  selector:
    matchLabels:
      app: ws-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: ws-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
          - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-conf
